<resources>

    <!-- Idioma: inglés -->
    <string name="app_name" translatable="false">AteneaNote</string>

    <string name="hint_password">Password</string>
    <string name="hint_email" translatable="false">email@example.com</string>
    <string name="hint_name">Name</string>
    <string name="hint_conf_pass">Pass.Confirm</string>

    <string name="label_login">Login</string>
    <string name="label_register">Register</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>

    <string name="err_empty">Fields cannot be empty</string>
    <string name="err_pass">Passwords must be equals</string>
    <string name="err_register">Register error</string>


    <!-- nacionalidades -->
    <string-array name="arr_paises">
        <item>Spain</item>
        <item>France</item>
        <item>United Kingdom</item>
        <item>Italy</item>
        <item>Germany</item>
        <item>United States</item>
    </string-array>
    <string name="label_logout">Logout</string>
    <string name="remember_me">Remember me?</string>
    <string name="dont_remember">I don\'t remember my password</string>
    <string name="register_button">Don\'t have an account yet?</string>
    <string name="user_name">User Name</string>
    <string name="have_account">Already have an account!</string>
    <string name="label_signup">Sign up</string>
    <string name="user_surname">Surname</string>
    <string name="email_dialog_title">Email Verification</string>
    <string name="email_dialog_body">We sent you an email in order to verify your address, please click in the link included to be able to access your AteneaNote account.</string>
    <string name="OK">Got it!</string>
    <string name="title_activity_main_drawer" translatable="false">MainDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">UserName</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_home">All materials</string>
    <string name="drawer_overview">Overview</string>
    <string name="drawer_sign_out">Sign Out</string>
    <string name="menu_share">Share</string>
    <string name="drawer_study">Study</string>
    <string name="menu_send">Send</string>
    <string name="content_activity_name">AteneaNote Materials</string>
    <string name="menu_home" translatable="false">\@string/drawer_home</string>
    <string name="ya_registrada">This email is already registered.</string>
    <string name="dialogLevel3Title">What would you like to create?</string>
    <string name="dialogLevel3Note">Note</string>
    <string name="dialogLevel3Summary">Summary</string>
    <string name="summary_layout">S</string>
    <string name="note_layout">N</string>
    <string name="dialogLevel2Title">Create a new Subject!</string>
    <string name="dialogLevel2Subject">Subject Name</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
    <string name="dialogLevel1Title">Edit Course</string>
    <string name="dialogLevel1Course">Course Name</string>
    <string name="dialogLevel1TitleCreate">Create a new Course!</string>
    <string name="dialogLevel2TitleUpdate">Edit Subject</string>
    <string name="dialogLevel3TitleUpdate">Edit Note</string>
    <string name="dialogLevel3TitleUpdate2">Edit Summary</string>


</resources>
