<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/drawer_home" />
        <item
            android:id="@+id/nav_study"
            android:icon="@drawable/ic_chrome_reader_mode_black_24dp"
            android:title="@string/drawer_study" />
        <item
            android:id="@+id/nav_summary"
            android:icon="@drawable/ic_summary"
            android:title="@string/drawer_overview" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit"
            android:title="@string/drawer_sign_out" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
